# cherrytree2

./: .gitignore  CLAUDE.md  CLAUDE.md.backup  IDEAS.md  PROJECT.md  README.md  TREE.md  example-5.0.yml  pyproject.toml  requirements-dev.txt  requirements.txt
cherrytree/: __init__.py  __main__.py  branch_detection.py  bulk_analysis.py  cli.py  commit.py  config.py  conflict_analysis.py  formatting.py  git_basic.py  git_blame_analyzer.py  git_conflict_analyzer.py  git_interface.py  git_interface_new.py  git_parser.py  git_utils.py  github_interface.py  micro.py  micro_release.py  minor.py  next.py  pull_request.py  status.py  sync.py  sync_validation.py  tables.py  utils.py
releases/: 4.0.yml  6.0.yml
tests/: test_merge_tree_parsing.py
